# ransfoil

./: .gitattributes  COPYRIGHT  Makefile.am  Makefile.in  README  README_CHS  aclocal.m4  aero2dcom.h  comgolden.py  comperf.py  config.h.in  configure  configure.ac  console.f03  libcallexpc.c  libcallexpf.f03  perftestfoil.sh  ransfoil.config  ransfoil.configcpt  ransfoil.configxyz  rdtest.sh  regolden.sh  regtestfoil.sh
.github/workflows/: makefile.yml
case1/: GA_W-1.xyz  Makefile.am  Makefile.in  NACA0012.xyz  whitcomb.xyz
cases/: GA_W-1.cpt  Makefile.am  Makefile.in  NACA0012.cpt  NACA001264.cpt  NACA001264.xyz  circle_1e-3hy.grd  circle_hy.xyz  goe495.cpt  material.prop  nasasup5.cpt  whitcomb.cpt
doc/: Makefile.am  Makefile.in
lib/: BlockTDMA.f03  COM.f03  Cell2node.f03  Condiff.f03  Connector.f03  Csfit.f03  Defercorrect.f03  Densityinterp.f03  Derivatives.f03  Genmesh.f03  Hypmesh.f03  HypreCUDAsolver.f03  Hypresolver.f03  Initial.f03  Interp1d.f03  Jacobi.f03  Libaero2d.F03  Linearsolver.f03  Makefile.am  Makefile.in  PCEcoe.f03  Postprocess.f03  RMS.f03  Readpara.f03  Results.f03  Spline.f03  Tanhline.f03  Turvis.f03  Velcorrect.f03  Wallfunc.f03  cudaf.f03
scripts/: Makefile.am  Makefile.in  runwhitcomb.bat
scripts/subsonic/: Makefile.am  Makefile.in  whitcomb1_1.configxyz  whitcomb1_2.configxyz
scripts/supersonic/: Makefile.in  whitcomb1_1.configxyz  whitcomb1_2.configxyz  whitcomb1_3.configxyz
scripts/transonic/: Makefile.am  Makefile.in  whitcomb1_1.configxyz  whitcomb1_2.configxyz  whitcomb1_3.configxyz
scripts/whitcomb1/: Makefile.am  Makefile.in  whitcomb.xyz
src/: Makefile.am  Makefile.in  aero2dcom.h  console.f03  gccompile.sh  gfcompile.sh  libcallexpc.c  libcallexpf.f03
test/: Makefile.am  Makefile.in  ransfoil.config.0012.farboundist.cpt  ransfoil.config.0012.freebc.cpt  ransfoil.config.0012.mat.xyz  ransfoil.config.0012.xyz  ransfoil.config.001264.cpt  ransfoil.config.GA_W-1.cpt  ransfoil.config.GA_W-1.xyz  ransfoil.config.cylinder.grd  ransfoil.config.cylinder.xyz  ransfoil.config.goe495.cpt  ransfoil.config.nasasup5.otype.cpt  ransfoil.config.whitcomb.1.xyz  ransfoil.config.whitcomb.2.xyz  ransfoil.config.whitcomb.cpt.1  ransfoil.config.whitcomb.cpt.2  ransfoil.config.whitcomb.xyz.1  ransfoil.config.whitcomb.xyz.2  ransfoil.config.whitcomb.xyz.super.1  ransfoil.config.whitcomb.xyz.super.2
