AUTOMAKE_OPTIONS = foreign
dist_data_DATA = ransfoil.config.0012.xyz ransfoil.config.cylinder.grd ransfoil.config.whitcomb.cpt.1 ransfoil.config.whitcomb.xyz.super.1 \
ransfoil.config.0012.farboundist.cpt ransfoil.config.001264.cpt ransfoil.config.cylinder.xyz ransfoil.config.whitcomb.cpt.2 ransfoil.config.whitcomb.xyz.super.2 \
ransfoil.config.0012.freebc.cpt ransfoil.config.GA_W-1.cpt ransfoil.config.goe495.cpt ransfoil.config.whitcomb.xyz.1 \
ransfoil.config.0012.mat.xyz ransfoil.config.GA_W-1.xyz ransfoil.config.nasasup5.otype.cpt ransfoil.config.whitcomb.xyz.2